logs/flutter_daemon.txt
!! PLEASE REVIEW THIS LOG FOR SENSITIVE INFORMATION BEFORE SHARING !!

Dart Code extension: 3.71.20230801
Flutter extension: 3.71.20230801 (not activated)

App: Visual Studio Code
Version: 1.81.0
Platform: win

HTTP_PROXY: undefined
NO_PROXY: undefined

Logging Categories:
    FlutterDaemon

Mon Aug 07 2023 [12:13:40 GMT+0700 (Indochina Time)] Log file started
[12:13:40 PM] [FlutterDaemon] [Info] Spawning C:\src\flutter\bin\flutter.bat with args ["daemon"]
[12:13:40 PM] [FlutterDaemon] [Info] ..  in C:\src\flutter
[12:13:40 PM] [FlutterDaemon] [Info] ..  with {"toolEnv":{"FLUTTER_HOST":"VSCode","PUB_ENVIRONMENT":"vscode.dart-code"}}
[12:13:40 PM] [FlutterDaemon] [Info]     PID: 10304
[12:13:42 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.connected","params":{"version":"0.6.1","pid":22628}}]
[12:13:42 PM] [FlutterDaemon] [Info] ==> [{"id":"1","method":"device.enable"}]
[12:13:42 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"status","message":"Starting device daemon..."}}]
[12:13:42 PM] [FlutterDaemon] [Info] ==> [{"id":"2","method":"emulator.getEmulators"}]
[12:13:42 PM] [FlutterDaemon] [Info] <== [{"id":"1"}]
[12:13:45 PM] [FlutterDaemon] [Info] <== [{"id":"2","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[12:13:47 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"windows","name":"Windows","platform":"windows-x64","emulator":false,"category":"desktop","platformType":"windows","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Windows [Version 10.0.22621.2070]","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[12:13:47 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"chrome","name":"Chrome","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Google Chrome 115.0.5790.170","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[12:13:47 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"edge","name":"Edge","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Edge 115.0.1901.188","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[12:13:47 PM] [FlutterDaemon] [Info] ==> [{"id":"3","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[12:13:47 PM] [FlutterDaemon] [Info] <== [{"id":"3","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:17:58 PM] [FlutterDaemon] [Info] ==> [{"id":"4","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[12:17:58 PM] [FlutterDaemon] [Info] <== [{"id":"4","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:17:58 PM] [FlutterDaemon] [Info] ==> [{"id":"5","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[12:17:58 PM] [FlutterDaemon] [Info] <== [{"id":"5","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:7:8: Error: Type 'dataJson' not found.
Future<dataJson> fetchAblbum() async {
       ^^^^^^^^
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:25:15: Error: Type 'dataJson' not found.
  late Future<dataJson> futureAlbum;
              ^^^^^^^^
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:11:12: Error: Undefined name 'dataJson'.
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)]     return dataJson.fromJson(jsonDecode(response.body));
           ^^^^^^^^
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:25:15: Error: 'dataJson' isn't a type.
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)]   late Future<dataJson> futureAlbum;
              ^^^^^^^^
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:37:30: Error: 'dataJson' isn't a type.
[1:10:11 PM] [FlutterRun] [Error] [Dart  (Chrome)]         child: FutureBuilder<dataJson>(
                             ^^^^^^^^
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:7:8: Error: Type 'dataJson' not found.
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)] Future<dataJson> fetchAblbum() async {
       ^^^^^^^^
lib/home/primarymessage.dart:25:15: Error: Type 'dataJson' not found.
  late Future<dataJson> futureAlbum;
              ^^^^^^^^
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:11:12: Error: Undefined name 'dataJson'.
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)]     return dataJson.fromJson(jsonDecode(response.body));
           ^^^^^^^^
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:25:15: Error: 'dataJson' isn't a type.
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)]   late Future<dataJson> futureAlbum;
              ^^^^^^^^
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)] lib/home/primarymessage.dart:37:30: Error: 'dataJson' isn't a type.
[1:14:29 PM] [FlutterRun] [Error] [Dart  (Chrome)]         child: FutureBuilder<dataJson>(
                             ^^^^^^^^
